Delete resources reported as lost when returned to Canvas2DLayerBridge.

Lost resources are still valid textures, but they can not be re-used
by the client. The client is still responsible for freeing them.

R=junov@chromium.org

Bug: 768049
Change-Id: Icbd14789f27a6873648b2ffd3a07099664a02698
Reviewed-on: https://chromium-review.googlesource.com/682101
Reviewed-by: Justin Novosad <junov@chromium.org>
Commit-Queue: danakj <danakj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504105}
Former-commit-id: 183dc06b8570c6aee5f527fb9cf48591398b0b03